# spanspector

./: Cargo.toml  README.md  justfile
.github/workflows/: ci.yml
crates/spanspector-cli/: Cargo.toml
crates/spanspector-cli/src/: commands.rs  main.rs
crates/spanspector-core/: Cargo.toml
crates/spanspector-core/src/: digest.rs  lib.rs  redaction.rs  run.rs
crates/spanspector-mcp/: Cargo.toml
crates/spanspector-mcp/src/: error.rs  exec.rs  lib.rs  path.rs  resources.rs  safety.rs  server.rs  tools.rs
crates/spanspector-mcp/tests/: fixture.rs
crates/spanspector-schema/: Cargo.toml
crates/spanspector-schema/src/: error.rs  event.rs  jsonl.rs  lib.rs  record.rs  redact.rs  summary.rs
crates/spanspector-tracing/: Cargo.toml
crates/spanspector-tracing/src/: builder.rs  layer.rs  lib.rs  nonblocking.rs  visitor.rs  writer.rs
crates/spanspector-tracing/tests/: layer.rs  nonblocking.rs
docs/: integration.md  mcp-tools.md  performance.md  security.md  trace-schema.md
examples/cli-command/: Cargo.toml
examples/cli-command/src/: main.rs
examples/server-integration/: Cargo.toml
examples/server-integration/src/: main.rs
tests/fixtures/example-run/: trace.jsonl
