[package]
name = "spanspector-core"
description = "Shared SpanSpector domain types: redaction primitives, run metadata, hashing."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[dependencies]
serde.workspace = true
sha2.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
