[package]
name = "spanspector-mcp"
description = "A safe, local MCP-style server exposing SpanSpector evidence as read-only resources and allowlisted tools."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[dependencies]
spanspector-core.workspace = true
spanspector-schema.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[lints]
workspace = true
