[package]
name = "spanspector-schema"
description = "The spanspector-trace/v1 JSONL event schema: types, redaction, validation, summaries."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[dependencies]
spanspector-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[lints]
workspace = true
