[package]
name = "spanspector-tracing"
description = "A tracing-subscriber Layer that converts spans and events into spanspector-trace JSONL."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[dependencies]
spanspector-core.workspace = true
spanspector-schema.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-core.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
