[package]
name = "spanspector-example-server"
description = "Example: compose SpanSpector with a fmt subscriber and a per-layer filter, like a server would."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[[bin]]
name = "spanspector-example-server"
path = "src/main.rs"

[dependencies]
spanspector-tracing.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
